Fixed Pax Exam Test Errors. Added Felix dependency